--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,6 +1,7 @@
 ---
 import NavLink from './NavLink.astro';
 import ThemeToggle from './ThemeToggle.astro';
+import SearchBox from './SearchBox.astro';
 import siteConfig from '../data/site-config';
 
 const navLinks = siteConfig.headerNavLinks || [];
@@ -32,6 +33,9 @@ const navLinks = siteConfig.headerNavLinks || [];
                             </NavLink>
                         </li>
                     ))}
+                    <li class="py-1 md:ml-4">
+                        <SearchBox class="max-md:mt-2" />
+                    </li>
                 </ul>
             </div>
         )
